# ai-nexus

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/skills/ai-nexus/: SKILL.md
docs/: ai-nexus-guide.md
docs/feishu/: 00-项目总览与路线图.md  01-核心定位与竞品分析.md  02-数据库设计.md  03-知识抽取与审核工作流.md  04-MCP-Server设计.md  05-开发流程Hook设计.md  附录-Claude-code泄露启示录.md
scripts/: init_db.py  install-hooks.sh  seed_data.py
src/ai_nexus/: __init__.py  config.py  main.py
static/: console.css  graph.css  graph.js  index.html
templates/: base.html  dashboard.html
templates/audit/: list.html
templates/entities/: deduplicate.html  form.html  list.html
templates/graph/: page.html
templates/imports/: page.html
templates/lint/: dashboard.html
templates/relations/: form.html  list.html
templates/rules/: detail.html  form.html  list.html
templates/settings/: page.html
tests/: conftest.py  test_api.py  test_app.py  test_audit_api.py  test_audit_ingestion.py  test_audit_redesign.py  test_audit_repo.py  test_code_references.py  test_cold_start.py  test_e2e_ingest.py  test_entity_repo.py  test_extraction_service.py  test_extraction_service_v2.py  test_flywheel.py  test_graph_service.py  test_graph_service_performance.py  test_hooks.py  test_ingest_service.py  test_lint_service.py  test_mcp_tools.py  test_mem0_proxy.py  test_migrations.py  test_models.py  test_phase0.py  test_post_task_hook.py  test_query_service.py  test_relation_repo.py  test_rule_repo.py  test_rule_repo_binding.py  test_sqlite.py  test_sqlite_transactions.py  test_structural_scanner.py
(+70 files in other folders)
